remote-plan up to r5 and s1
